<resources>
    <string name="app_name">DynamicFormLibrary</string>
    <string name="domain">@ongo.com</string>
    <string name="mall_id">46</string>
    <string name="server_api_url">http://149.129.138.145:8081</string>
    <string name="server_payment_url">http://54.251.36.80:9000</string>
    <string name="thank_dialog_title">Thank You</string>
    <string name="thank_dialog_sub_title">Your Details under verification</string>
    <string name="thank_dialog_text1">After Verification your Ad will be active, You will get notification ones it updated.</string>
    <string name="thank_dialog_text2">You will get notification ones it updated.</string>
    <string name="contact_form">Contact Form</string>
    <string name="call_helpline">Call Helpline</string>
    <string name="loader_dozer">Loaders &amp; Dozers</string>
    <string name="all_service">All Service</string>
    <string name="minimum_service_charge">Minimum Serive :</string>
    <string name="price_2000">2,000/-</string>
    <string name="service_center">Service Center</string>
    <string name="dozers_service">Dozers Service</string>
    <string name="car_wash">Carwash :</string>
    <string name="free">Free</string>
    <string name="car_vaccum">Car Vacuum :</string>
    <string name="percent_50"> -50%</string>
    <string name="nitro_air">Nitrogen Air :</string>
    <string name="car_polish">Car Polish :</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="am10_8pm">10am to 8pm</string>
    <string name="dozer_service_center_desc">We have a range of car servicing options to suit all types of cars</string>
    <string name="service_center_loc">Service Center Location</string>
    <string name="service_center_address">Plot No. 9, Survey No. 64, Madhapur, Near Home@, Besides Ratna Deep Supermarket, Telangana, Hyderabad-81.</string>
    <string name="service_center_phone">Phone: 040 6677 8899</string>
    <string name="service_center_mobile">Mobile: 9876543210 / 20</string>
    <string name="call">Call</string>
    <string name="enquirys">Enquirys</string>
    <string name="reset">Reset</string>
    <string name="get_otp">Get OTP</string>
    <string name="submit">Submit</string>
    <string name="change_pin">Change PIN</string>
    <string name="create_pin">Create Your Pin</string>
    <string name="reset_your_pin">Reset Your Pin</string>
    <string name="user_mobile91">+91 xxxxx</string>
    <string name="map_str">Map</string>
    <string name="hyderabad">Hyderabad</string>
    <string name="replay">Replay</string>
    <string name="enquirys_from">Enquirys From</string>
    <string name="product">Product</string>
    <string name="features">Features</string>
    <string name="specification">Specification</string>
    <string name="general">General</string>
    <string name="drives">Drives</string>
    <string name="supplier">Supplier</string>
    <string name="services">Services</string>
    <string name="buyer">Buyer</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string-array name="gender_choice">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="phone_no">Phone No.</string>
    <string name="email_id">Email Id</string>
    <string name="change_password">Change Password</string>
    <string name="user_mail">loaders@gmail.com</string>
    <string name="user_mobile0">09876543210</string>
    <string name="skip">Skip</string>
    <string name="start">Got it</string>
    <string name="slide_1_title">Today at 7:30 PM, join our webinar "An Introduction to Teamwork Projects". Let our experts guide you through key areas and see what you can achieve using Teamwork Projects.</string>
    <string name="slide_2_title">Today at 7:30 PM, join our webinar "An Introduction to Teamwork Projects". Let our experts guide you through key areas and see what you can achieve using Teamwork Projects.</string>
    <string name="slide_3_title">Today at 7:30 PM, join our webinar "An Introduction to Teamwork Projects". Let our experts guide you through key areas and see what you can achieve using Teamwork Projects.</string>
    <string name="back">Back</string>
    <string name="welcome_to">Welcome to</string>
    <string name="user_nameU">UserName</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="otp">OTP</string>
    <string name="resend">Resend</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your pin?</string>
    <string name="reset_pin">Reset pin</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="secs30">30s</string>
    <string name="have_acc">Do not have an account?</string>
    <string name="create_acc">Create Account now</string>
    <string name="filter">Filter</string>
    <string name="menu">Menu</string>
    <string name="home">HOME</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="full_name">Full Name</string>
    <string name="dd_mmm_yy">DD-MMM-YY</string>
    <string name="dd_mm_yy">DD-MM-YY</string>
    <string name="recent_ads">Recent Ads</string>
    <string name="category">Category</string>
    <string name="featured_ads">Featured ads</string>
    <string name="view_more">View more</string>
    <string name="available">Available</string>
    <string name="dozer">Dozer</string>
    <string name="apply">Apply</string>
    <string name="reply">Reply</string>
    <string name="reach_us_map">Reach Us using Map</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="buy">Buy</string>
    <string name="Rs">\u20B9</string>
    <string name="price_1000">1000/-</string>
    <string name="price_6500">6500/-</string>
    <string name="price_18000">18000/-</string>
    <string name="price_5000000">50,00,000/-</string>
    <string-array name="categories">
        <item>Sell</item>
        <item>Rent</item>
    </string-array>
    <string name="brand">Brand</string>
    <string name="type">Type</string>
    <string name="model">Model</string>
    <string name="mfg_year">Mfg. Year</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="add_minimum">add minimum six photos</string>
    <string name="get_approve">to get approve</string>
    <string name="edit">edit</string>
    <string name="new_enquirys">New Enquirys</string>
    <string name="new_str">New</string>
    <string name="user_name_str">Mr. Ashok</string>
    <string name="subject">Subject</string>
    <string name="link_str">www.LoadersNdozers.com</string>
    <string name="buyer_seller">Buyer / Seller</string>
    <string name="smart_cars">Smart Cars</string>
    <string name="enter_ur_msg">Enter your message here..</string>
    <string name="off_name">Loaders &amp; Dozers Pvt Ltd.</string>
    <string name="off_mail">Email: contact@loadersndozers.com,</string>
    <string name="off_link">Web: www.LoadersNdozers.com</string>
    <string name="off_addr">Hitech Towers , 1st Floor, Above Honda Showroom Phase. 11 &amp; 12, Hitech City, Hyderabad - 500025.</string>
    <string name="abt_us_str">At Loaders &amp;amp; Dozers, we believe everyone deserves to have a website or online store. Innovation and simplicity makes us happy: our goal is to remove any technical or financial barriers that can prevent business owners from making their own website. We\'re excited to help you on your journey!</string>
    <string name="sell_dozers">Sell Dozers</string>
    <string name="enquiry_form">Enquiry Form</string>
    <string name="enquiries">Enquiries</string>
    <string name="added_dozers">ADDED DOZERS</string>
    <string name="contact_us">Contact Us</string>
    <string name="no_network">Internet is not available</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout_confirmation_text">Are you sure?</string>
    <string name="allMallsApp">false</string>
    <string name="default_notification_channel_id" translatable="false">112233</string>
    <string name="home_menu">Home</string>
    <string name="buy_menu">Buy</string>
    <string name="sale_menu">Post Adds</string>
    <string name="driver_menu">Driver</string>
    <string name="serivce_menu">Service</string>
    <string name="spare_parts_manu">Spare Parts</string>
    <string name="enquiry_menu">Enquirys</string>
    <string name="about_us_menu">About Us</string>
    <string name="contact_us_menu">Contact Us</string>
    <string name="profile_menu">Profile</string>
    <string name="logout">Logout</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_10_digit_mobile_number">Enter 10 digit mobile number</string>
    <string name="enter_pin">Enter pin</string>
    <string name="enter_cpin">Enter confirm pin</string>
    <string name="enter_4_digit_otp">Enter 4 digit otp</string>
    <string name="enter_4_digit_pin">Enter 4 digit pin</string>
    <string name="enter_4_digit_cpin">Enter 4 digit confirm pin</string>
    <string name="reenter_otp">Please enter correct OTP</string>
    <string name="pin_conformpin_doesnt_match">Pin and Confirm Pin do not match</string>
    <string name="something_went_wrong">Something went wrong, Please try after some time</string>
    <string name="pin_changed">Pin changed successfully</string>
    <string name="pin">Pin</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="newPin">New Pin</string>
    <string name="oldPin">Old Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="no_data">Data not available</string>
    <string name="no_comments">No comments</string>
    <string name="search_list">Search...</string>
    <string name="OTP">One Time Password</string>
    <string name="search_location">Search Locations</string>
    <string name="select_start_date">Select start date</string>
    <string name="content_description">Content description</string>
    <string name="powered_by">Powered by</string>
    <string name="_null">null</string>
    <string name="select_altleast_one">Select atleast one search type</string>
    <string name="select_both_dates">Select start and end dates for search</string>
    <string name="under_dev">Under Development</string>
    <string name="please_enter_correct_pin">Please enter correct PIN.</string>
    <string name="mobile_pin_incorrect">Mobile number or Pin incorrect</string>
    <string name="select_categories">Select Categories</string>
    <string name="type_of_equipment_handled">Type Of Equipments Handled</string>
    <string name="licence_number">Licence Number</string>
    <string name="id_proof">Id Proof</string>
    <string name="preferred_locations">Preferred Locations</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="WorkStatus">Work Status</string>
    <string name="services_center">Services Center</string>
    <string name="operator">Operator</string>
    <string name="login_signup">Login/Signup</string>
    <string name="alert">Alert</string>
    <string name="per_day_without_fuel">Per Day without Fuel</string>
    <string name="per_day_with_fuel">Per Day with Fuel</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="chat">Chat</string>
    <string name="login_to_continue">Please login to continue</string>
    <string name="my_posts">My Posts</string>
    <string name="my_ads">My ADS</string>
    <string name="my_chats">My Chats</string>
    <string name="enquiry">Enquiry</string>
    <string name="ok">Ok</string>
</resources>