<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/rounded_white_background2"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/almost_black"
            android:orientation="horizontal"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/thank_dialog_title"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/thank_dialog_sub_title"
                    android:textColor="@color/thank_dialog_sub_title"
                    android:textSize="@dimen/text_size_16" />

            </LinearLayout>

            <ImageView
                android:id="@+id/cancel_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_size_15"
                android:layout_marginRight="@dimen/margin_size_15"
                android:contentDescription="@string/content_description"
                android:visibility="invisible"
                android:src="@drawable/white_round_cross" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/thank_dialog_text1"
            android:textColor="@color/thank_dialog_sub_title"
            android:textSize="@dimen/text_size_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_size_20"
            android:layout_marginRight="@dimen/margin_size_20"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/okTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_size_50"
                android:layout_marginEnd="@dimen/margin_size_50"
                android:gravity="center"
                android:padding="@dimen/margin_size_15"
                android:text="@string/ok"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_16" />

            <!--<View-->
                <!--android:layout_width="1dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@color/light_gray" />-->

            <!--<TextView-->
                <!--android:id="@+id/callHelpline"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="center"-->
                <!--android:padding="@dimen/margin_size_15"-->
                <!--android:text="@string/call_helpline"-->
                <!--android:textColor="@color/thank_dialog_sub_title"-->
                <!--android:textSize="@dimen/text_size_16" />-->

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
