<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="gone">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/backIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/content_description"
                        android:padding="@dimen/margin_size_5"
                        android:src="@drawable/ic_back"
                        android:tint="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/back"
                        android:textColor="@color/black" />
                </LinearLayout>

                <TextView
                    android:id="@+id/titleTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_20"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="invisible"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_size_10"
                        android:layout_marginRight="@dimen/margin_size_10"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/filter"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_size_20"
                        android:layout_marginRight="@dimen/margin_size_20"
                        android:contentDescription="@string/content_description"
                        android:padding="@dimen/margin_size_5"
                        android:src="@drawable/filter" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/almost_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_size_15"
            android:layout_marginStart="@dimen/margin_size_15"
            android:layout_marginTop="@dimen/margin_size_10"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/photosLL"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/photosRV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/addPhotoIV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="@dimen/margin_size_15"
                    android:src="@drawable/ic_add_a_photo_light" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size_15"
                android:background="@color/edit_trans">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_size_10"
                android:layout_marginTop="@dimen/margin_size_20"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/submitBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yellow_background"
                    android:gravity="center"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:paddingBottom="@dimen/margin_size_10"
                    android:paddingLeft="@dimen/margin_size_30"
                    android:paddingRight="@dimen/margin_size_30"
                    android:paddingTop="@dimen/margin_size_10"
                    android:text="@string/submit"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
